--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -23,3 +23,15 @@ body,
   .el-pagination {
     margin-top: 15px;
   }
+
+  .el-steps {
+    margin: 15px 0;
+  }
+
+  .el-steps_title {
+    font-size: 13px;
+  }
+
+  .ql-editor {
+    min-height: 300px;
+  }
